# JAX-IDEM

./: .gitignore  README.md  README.org  _quarto.yml  bibliography.bib  goals.org  index.qmd  index.quarto_ipynb  objects.json  pathmagic.py  pyproject.toml  pytest.ini  scaling.qmd  timing_results.csv  timing_results_cpu.csv  timing_results_cpu_1.csv
_site/: index.html  search.json
_site/docs/: filtering_and_smoothing.html  index.html  mathematics.html
_site/reference/: Grid.html  IDEM_Model.html  bisquare.html  gen_example_idem.html  information_filter_indep.html  kalman_filter.html  kalman_filter_indep.html  kalman_smoother.html  param_exp_kernel.html  place_basis.html  simIDEM.html
data/: obs_data_r-ide.csv
docs/: Bibliography.bib  README.html  _quarto.yml  filtering_and_smoothing.html  filtering_and_smoothing.qmd  fitIDEM.py  fitscript.py  fitting.html  fitting.qmd  fitting_new.html  fitting_new.qmd  index.html  index.qmd  mathematics.html  mathematics.qmd  mathematics.tex  scaling.html  search.json  z_obs.csv
docs/quarto/: filtering_and_smoothing.html  index.html  mathematics.html
docs/reference/: Basis.html  Grid.html  IDEM.html  IDEM_Model.html  Kernel.html  basis_params_to_st_data.html  bisquare.html  create_grid.html  gen_example_idem.html  index.html  information_filter.html  information_filter_indep.html  kalman_filter.html  kalman_filter_indep.html  kalman_smoother.html  outer_op.html  param_exp_kernel.html  place_basis.html  simIDEM.html  sim_idem.html  st_data.html
docs/site/: Scaling_Tests.html  Sydney_Radar.html  Sydney_hamilton_traces.html  comparison.html  filtering_and_smoothing.html  fit_example.html  mathematics.html
org_notebooks/: AZM-IDE-testing.org  IDEM-org-notebook.org  R-IDE_test.Rscript  cuttingroomfloor.org
quarto/: .~lock.z_obs.csv#  filtering_and_smoothing.qmd  fit_information.py  fitting.quarto_ipynb  index.qmd
reference/: Basis.qmd  Grid.qmd  IDEM.qmd  IDEM_Model.qmd  Kernel.qmd  basis_params_to_st_data.qmd  bisquare.qmd  create_grid.qmd  gen_example_idem.qmd  index.qmd  information_filter.qmd  information_filter_indep.qmd  kalman_filter.qmd  kalman_filter_indep.qmd  kalman_smoother.qmd  outer_op.qmd  param_exp_kernel.qmd  place_basis.qmd  simIDEM.qmd  sim_idem.qmd  st_data.qmd
scripts/: Sydney_hmc_prior.py  Sydney_hmc_prior_64.py  radar_df.csv
scripts/pickles/: adaptive_params_fixed.pkl  adaptive_params_prior.pkl  hmc_sample.pkl  rmh_sample.pkl
scripts/results/: 2025-04-30_08_07_19_results.csv  2025-04-30_09_46_25_results.csv  2025-04-30_12_29_01_results.csv  2025-05-12_17_50_34_results.csv  2025-06-02_15:56:01_results_hmc_prior_32.csv  2025-06-02_16:52:04_results_hmc_prior_32.csv  2025-06-02_17:21:37_results_hmc_prior_32.csv  2025-06-03_09:58:03_results_hmc_prior_64.csv  2025-06-04_14:43:39_results_hmc_prior_32.csv  (+9 more)
site/: Bibliography.bib  Scaling_Tests.qmd  Scaling_Tests.tex  Sydney_Radar.py  Sydney_Radar.qmd  Sydney_Radar.quarto_ipynb  Sydney_hamilton_traces.qmd  Sydney_rmh.py  bayesian_analysis.qmd  comparison.qmd  debug_filters.py  filtering_and_smoothing.qmd  filtering_and_smoothing.quarto_ipynb  fit_example.aux  fit_example.qmd  fit_example.tex  header.html  header.tex  mathematics.qmd  mathematics.quarto_ipynb  mathematics.tex  scratch.py
(+88 files in other folders)
