[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxidem"
version = "0.1.5"
authors = [
  { name="Evan Tate Paterson Hughes", email="etatephughes@gmail.com" },
]
description = "Integro-difference Equation Models for Python-JAX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackjax>=1.2.5",
    "jax>=0.5.0",
    "jax-tqdm>=0.3.1",
    "jaxlib>=0.5.0",
    "jaxtyping>=0.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "optax>=0.2.4",
    "pandas>=2.0.3",
    "plotly>=5.24.1",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
    "python-lsp-server[all]>=1.12.2",
    "quartodoc>=0.9.1",
    "seaborn>=0.13.2",
    "setuptools>=75.3.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/tatephughes/JAX-IDEM"
Issues = "https://github.com/tatephughes/JAX-IDEM/issues"


[tool.setuptools.packages]
find = { where = ["src"] }
