[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxidem"
version = "0.1.11"
authors = [
  { name="Evan Tate Paterson Hughes", email="etatephughes@gmail.com" },
]
description = "Integro-difference Equation Models for Python-JAX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackjax>=1.2.5",
    "jax-tqdm>=0.3.1",
    "jaxlib>=0.5.0",
    "jaxtyping>=0.3.0",
    "jupyter>=1.1.1",
    "kaleido==0.2.1",
    "matplotlib>=3.7.5",
    "optax>=0.2.4",
    "pandas>=2.0.3",
    "plotly>=6.1.1",
    "pytest>=8.3.5",
    "quarto>=0.1.0",
    "quarto-cli>=1.7.31",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/tatephughes/JAX-IDEM"
Issues = "https://github.com/tatephughes/JAX-IDEM/issues"


[tool.setuptools.packages]
find = { where = ["src"] }
